--- a/index.html
+++ b/index.html
@@ -1,180 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpawnEngine — Mesh Layer</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <title>SpawnEngine — Mesh Layer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body class="theme-dark">
-    <div class="app-shell">
-        <div class="app-frame">
-            <!-- Header -->
-            <header class="app-header">
-                <div class="brand-row">
-                    <div class="brand-left">
-                        <button class="menu-btn" id="menu-toggle"><span></span><span></span><span></span></button>
-                        <div class="brand-icon">SE</div>
-                        <div>
-                            <div class="brand-copy-title">SpawnEngine</div>
-                            <div class="brand-copy-sub">Mesh Layer</div>
-                        </div>
-                    </div>
-                    <div class="brand-right">
-                        <div class="pill"><span class="pill-dot"></span> v0.2 Mesh preview · single player</div>
-                        <button class="btn-wallet" id="wallet-connect">Connect Wallet</button>
-                        <div class="wallet-sub" id="wallet-status">No wallet connected</div>
-                    </div>
-                </div>
-                <div class="mode-row">
-                    <span>Mode</span>
-                    <span>Gas ~<span id="gas-estimate">0.00</span> gwei est.</span>
-                </div>
-                <div class="status-row">
-                    <div class="status-pill">
-                        <span class="status-pill-label">Mesh Events</span>
-                        <span class="status-pill-value" id="mesh-events">0</span>
-                        <div class="gas-meter"><div class="gas-meter-fill" style="width: 0%;"></div></div>
-                    </div>
-                    <div class="status-pill">
-                        <span class="status-pill-label">XP</span>
-                        <span class="status-pill-value" id="xp-value">0</span>
-                    </div>
-                    <div class="status-pill">
-                        <span class="status-pill-label">Spawn Balance</span>
-                        <span class="status-pill-value" id="spawn-balance">0 SPN</span>
-                    </div>
-                </div>
-                <div class="nav-row">
-                    <div class="nav-tabs">
-                        <button class="nav-tab active"><span class="nav-dot"></span> Home</button>
-                        <button class="nav-tab"><span class="nav-dot"></span> Packs</button>
-                        <button class="nav-tab"><span class="nav-dot"></span> Trade</button>
-                        <button class="nav-tab"><span class="nav-dot"></span> Quests</button>
-                    </div>
-                </div>
-                <div class="ticker">
-                    <span class="ticker-label">Live Pulls</span>
-                    <div class="ticker-stream">
-                        <div class="ticker-inner" id="live-pulls"></div>
-                    </div>
-                </div>
-            </header>
-
-            <!-- Main Content -->
-            <main class="main-content">
-                <div class="panel">
-                    <div class="panel-title">Mesh Home</div>
-                    <div class="panel-sub">Unified view for packs, XP, and pulls</div>
-                    <div class="overview-grid">
-                        <div class="metric-card">
-                            <div class="metric-label">Today’s mesh events</div>
-                            <div class="metric-value" id="today-events">0</div>
-                            <div class="metric-foot">pack_open · burn · swap · zora_buy · casts</div>
-                        </div>
-                        <div class="metric-card">
-                            <div class="metric-label">XP streak</div>
-                            <div class="metric-value" id="xp-streak">0</div>
-                        </div>
-                        <div class="metric-card">
-                            <div class="metric-label">Spawn balance</div>
-                            <div class="metric-value" id="spawn-balance-dupe">0 SPN</div>
-                            <div class="metric-foot">internal mesh token</div>
-                        </div>
-                        <div class="metric-card">
-                            <div class="metric-label">Connected modules</div>
-                            <div class="metric-value">4</div>
-                            <div class="metric-foot">Factory · TokenSeries · Guard · UtilityRouter</div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="task-list">
-                    <div class="task-header">
-                        <span>Today’s Loop Rewards</span>
-                        <span>+<span id="reward-xp">0</span> XP available</span>
-                    </div>
-                    <div class="task-items" id="task-items"></div>
-                </div>
-
-                <div class="trading-panel">
-                    <div class="trading-card">
-                        <div class="trading-card-head">
-                            <div>
-                                <div class="trading-card-title">Wallet Mesh</div>
-                                <div class="trading-card-sub">Connect more wallets</div>
-                            </div>
-                            <span class="chip chip-online">Online</span>
-                        </div>
-                        <div class="trading-card-foot">Preview</div>
-                    </div>
-                    <!-- Add more cards dynamically if needed -->
-                </div>
-
-                <div class="pnl-summary-grid">
-                    <!-- PNL metrics can be added dynamically -->
-                </div>
-
-                <div class="pnl-chart" id="pnl-chart"></div>
-
-                <div class="recent-pulls">
-                    <div class="recent-pulls-header">Recent Pulls</div>
-                    <div id="recent-pulls-list"></div>
-                </div>
-            </main>
-
-            <!-- Footer -->
-            <footer class="app-footer">
-                <div>Dev docs on GitHub</div>
-                <div class="footer-links">
-                    <a href="#">@spawnengine</a>
-                    <a href="#">Log out (preview)</a>
-                </div>
-            </footer>
-        </div>
-    </div>
-
-    <!-- Modals -->
-    <div class="modal" id="wallet-modal">
-        <div class="modal-backdrop"></div>
-        <div class="modal-panel">
-            <div class="modal-title">Connect Wallet</div>
-            <div class="modal-sub">Choose your mesh</div>
-            <div class="modal-actions">
-                <button class="modal-btn primary" id="connect-confirm">Confirm</button>
-                <button class="modal-btn">Cancel</button>
-            </div>
-        </div>
-    </div>
-
-    <!-- Side Menu -->
-    <div class="side-menu" id="side-menu">
-        <div class="side-menu-backdrop"></div>
-        <div class="side-menu-panel">
-            <div class="side-menu-header">
-                <div class="side-menu-avatar">SE</div>
-                <div>
-                    <div class="side-menu-title">SpawnEngine</div>
-                    <div class="side-menu-sub">Mesh Layer</div>
-                </div>
-            </div>
-            <div class="side-settings-group">
-                <div class="side-settings-title">Themes</div>
-                <div class="side-theme-row">
-                    <button class="side-theme-btn active" data-theme="dark">Dark</button>
-                    <button class="side-theme-btn" data-theme="jurassic">Jurassic</button>
-                    <button class="side-theme-btn" data-theme="hologram">Hologram</button>
-                </div>
-            </div>
-            <ul class="side-menu-list">
-                <li class="side-menu-item">Creator Quests Overview</li>
-                <li class="side-menu-item">Wallet Mesh</li>
-                <li class="side-menu-item">Dev Docs</li>
-                <li class="side-menu-item">Log Out</li>
-            </ul>
-        </div>
-    </div>
-
-    <script src="app.js"></script>
+<body>
+  <div id="app-root"></div>
+  <script src="app.js"></script>
 </body>
 </html>
